force-app/main/default/objects/public_serviceattribute__x/public_serviceattribute__x.object-meta.xml
<CustomObject>
    <description>public$serviceattribute</description>
    <externalDataSource>Remote_Compute_Results</externalDataSource>
    <externalName>public$serviceattribute</externalName>
    <label>Remote Service Attribute</label>
    <pluralLabel>Remote Service Attributes</pluralLabel>
</CustomObject>