force-app/main/default/objects/public_serviceattribute__x/fields/attributeallowedvalues__c.field-meta.xml
<CustomField>
    <fullName>attributeallowedvalues__c</fullName>
    <description>attributeallowedvalues</description>
    <externalDeveloperName>attributeallowedvalues</externalDeveloperName>
    <label>Attribute Allowed Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>