force-app/main/default/objects/public_serviceattribute__x/fields/attributedescription__c.field-meta.xml
<CustomField>
    <fullName>attributedescription__c</fullName>
    <description>attributedescription</description>
    <externalDeveloperName>attributedescription</externalDeveloperName>
    <label>Attribute Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>