force-app/main/default/objects/public_serviceattribute__x/fields/attributelabel__c.field-meta.xml
<CustomField>
    <fullName>attributelabel__c</fullName>
    <description>attributelabel</description>
    <externalDeveloperName>attributelabel</externalDeveloperName>
    <label>Attribute Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>