force-app/main/default/objects/public_serviceattribute__x/fields/attributename__c.field-meta.xml
<CustomField>
    <fullName>attributename__c</fullName>
    <description>attributename</description>
    <externalDeveloperName>attributename</externalDeveloperName>
    <label>Attribute Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>