force-app/main/default/objects/public_serviceattribute__x/fields/refservicedefinitionid__c.field-meta.xml
<CustomField>
    <fullName>refservicedefinitionid__c</fullName>
    <description>refservicedefinitionid</description>
    <externalDeveloperName>refservicedefinitionid</externalDeveloperName>
    <label>refservicedefinitionid</label>
    <length>255</length>
    <referenceTo>public_servicedefinition__x</referenceTo>
    <relationshipLabel>public$serviceattribute</relationshipLabel>
    <relationshipName>public_serviceattribute</relationshipName>
    <type>ExternalLookup</type>
</CustomField>