force-app/main/default/objects/public_serviceattribute__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>attributename__c</columns>
    <columns>attributelabel__c</columns>
    <columns>refservicedefinitionid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>